--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/avro</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>io.confluent</groupId>
