--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>flow-schemas</name>
 
     <scm>
-        <developerConnection>scm:git:git://github.com/path_to_repository</developerConnection>
+        <developerConnection>scm:git:git://github.com/akvo/akvo-flow-schemas</developerConnection>
   </scm>
 
     <properties>
