--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: node_js
-
 sudo: required
-
 services:
-  - docker
-
+- docker
 cache:
   directories:
   - ${HOME}/.cache
   - ${HOME}/.m2
   - ${HOME}/google-cloud-sdk
-
 script:
-  - ./ci/build.sh
-
+- ./ci/build.sh
 env:
   global:
   - PATH=${HOME}/google-cloud-sdk/bin:$PATH
   - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+before_install:
+- openssl aes-256-cbc -K $encrypted_9b70e91a2aa4_key -iv $encrypted_9b70e91a2aa4_iv -in devops.asc.enc -out devops.asc -d
