--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -40,6 +40,11 @@ jobs:
           api-key: ${{ env.FOSSA_API_KEY }}
           branch: ${{ github.ref_name }}
           # branch: $GITHUB_REF
+
+      - uses: fossas/fossa-action@4e9e28fae0306e89d02e6a56c9ffcdae42043cb8
+        with:
+          api-key: ${{ env.FOSSA_API_KEY }}
+          run-test: true
           
       - name: Running FOSSA CLI
         run: |
